--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Improve your TSLint with the missing ESLint Rules",
   "main": "index.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "prepublish": "rm -rf dist && gulp publish"
   },
   "repository": {
     "type": "git",
